--- a/roles/minimal/tasks/fish.yml
+++ b/roles/minimal/tasks/fish.yml
@@ -1,6 +1,9 @@
 - name: Install fish
   ansible.builtin.shell: nix-env -iA nixpkgs.fish
 
+- name: Install exa
+  ansible.builtin.shell: nix-env -iA nixpkgs.exa
+
 - name: Check if the fish directory (at home) exists
   ansible.builtin.stat:
     path: $HOME/.config
