[ADD / UPDATE] Added a `fish_greeting.fish`
Added oh-my-fish with plugins
Updated fish and tmux configuration files

--- a/roles/minimal/files/.tmux.conf
+++ b/roles/minimal/files/.tmux.conf
@@ -1,21 +1,27 @@
-# Enable mouse
 setw -g mouse on
 
-# plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-set -s default-terminal 'tmux-256color'
+# Plugins
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "dracula/tmux"
+set -s default-terminal "tmux-256color"
 
-# dracula customizations
-set -g @dracula-plugins "battery weather time"
+# dracula config
+set -g @dracula-plugins "time ram-usage battery"
+set -g @dracula-show-left-icon "><>"
+set -g @dracula-refresh-rate 3
+set -g @dracula-day-month true
+
+# Just prevention
+set -ug @dracula-show-right-sep
+set -ug @dracula-show-left-sep
+set -g @dracula-show-flags false
+set -g @dracula-border-contrast false
+set -g @dracula-show-timezone false
 set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
-set -g @dracula-military-time true
-
-run '$HOME/.tmux/plugins/tpm/tpm'
 
 # History
-set -sg history-file $HOME/.tmux_history
+set -sg history-file ~/.tmux_history
 
-set -g default-command fish
+# Run Tmux Plugin Manager
+run "~/.tmux/plugins/tpm/tpm"
