--- a/roles/minimal/tasks/tmux.yml
+++ b/roles/minimal/tasks/tmux.yml
@@ -6,7 +6,7 @@
     path: $HOME/.tmux/plugins
   register: tmux_dir
 
-- name: "Ansible Create directory if not exists"
+- name: Ansible Create directory if not exists
   ansible.builtin.file:
     path: $HOME/.tmux/plugins
     state: directory
