--- a/roles/minimal/files/.tmux.conf
+++ b/roles/minimal/files/.tmux.conf
@@ -1,12 +1,12 @@
 setw -g mouse on
 
-# Plugins
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "dracula/tmux"
-set -s default-terminal "tmux-256color"
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+set -s default-terminal 'tmux-256color'
 
-# dracula config
+# dracula customizations
 set -g @dracula-plugins "time ram-usage battery"
 set -g @dracula-show-left-icon "><>"
 set -g @dracula-refresh-rate 3
@@ -23,5 +23,7 @@ set -g @dracula-show-powerline true
 # History
 set -sg history-file ~/.tmux_history
 
-# Run Tmux Plugin Manager
-run "~/.tmux/plugins/tpm/tpm"
+# Binds
+bind-key x kill-pane
+
+run '~/.tmux/plugins/tpm/tpm'
