[ADD] Added an oh-my-fish plugins to support foreign env (mostly for bash support)

--- a/roles/minimal/tasks/fish.yml
+++ b/roles/minimal/tasks/fish.yml
@@ -38,6 +38,7 @@
     - peco
     - bang-bang
     - fish_logo
+    - foreign-env
 
 # The shell path is hardcoded because `$(which fish)` cannot locate fish for some reasons
 - name: Set fish as the default shell
