--- a/roles/extra/files/i3blocks/config
+++ b/roles/extra/files/i3blocks/config
@@ -7,7 +7,7 @@
 # |_|____/|_.__/|_|\___/ \___|_|\_\___/
 
 align=center
-separator=false
+separator=true
 color=#f8f8f2
 separator_block_width=30
 markup=pango
@@ -17,91 +17,96 @@ command=xtitle
 interval=1
 
 [papesan_status]
-command=sc-is_live -c Papesan -d 🐐Papesan
+command=sc-is_live -c Papesan -d Pape
 interval=300
-border=#ff79c6
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
 
 [internet]
 command=sb-internet
 interval=1
-border=#bd93f9
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
 
 [nettraf]
 command=sb-nettraf
 interval=1
-border=#ff79c6
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
 
 [battery]
 command=sb-battery
 interval=5
-border=#bd93f9
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
-
-[containers]
-command=sc-docker_infos
-interval=3
-border=#8be9fd
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
-
-[home]
-command=sb-disk /home
-interval=3
-border=#bd93f9
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
-
-[memory]
-command=sb-memory
-interval=1
-border=#ff79c6
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
-
-[weather]
-command=LOCATION="montpellier" sb-forecast
-interval=20
-border=#bd93f9
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
 
 [volume]
 command=sb-volume
 interval=1
-border=#ff79c6
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
+
+# [containers]
+# command=sc-docker_infos
+# interval=3
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
+
+[home]
+command=sb-disk /mnt
+interval=3
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
+
+[memory]
+command=sb-memory
+interval=1
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
+
+[keyboard]
+command=sb-kbselect
+interval=20
+
+# [weather]
+# command=LOCATION="montpellier" sb-forecast
+# interval=20
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
+
 
 [date]
 command=sb-clock
 interval=1
-border=#bd93f9
-border_top=0
-border_right=0
-border_bottom=1
-border_left=0
+# border=#bd93f9
+# border_top=0
+# border_right=0
+# border_bottom=1
+# border_left=0
