--- a/roles/extra/templates/i3/config
+++ b/roles/extra/templates/i3/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:{{ primary_font }} 10
+font pango:Comic Code 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+#font pango:DejaVu Sans Mono 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -225,19 +225,19 @@ default_border pixel 1
 default_floating_border pixel 1
 
 # Wallapaper
-exec --no-startup-id feh --bg-fill $HOME/wallpapers/castle.jpg
+exec --no-startup-id feh --bg-fill $HOME/wallpapers/light.png
 
 # Screen locker
 bindsym --release $mod+l exec slock
 
-# Better exit
+# Exit mode
 mode "Exit: [l]ogout, [r]eboot, [s]hutdown" {
   
   bindsym l exec i3-msg exit
 
-  bindsym r exec systemctl reboot
+  bindsym r exec reboot
 
-  bindsym s exec systemctl shutdown
+  bindsym s exec shutdown now
 
   bindsym Escape mode "default"
 
@@ -252,7 +252,7 @@ bindsym $mod+s exec --no-startup-id rofimoji -a copy
 
 # Screenshot mode
 mode "Screenshot: [c]opy, [f]ull, [s]creen" {
-
+  
   bindsym c exec flameshot screen -n 0 -c
 
   bindsym f exec flameshot screen
